--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nrwl/next": "13.1.4",
     "core-js": "^3.6.5",
+    "fontfaceobserver": "^2.1.0",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
     "next": "12.0.0",
@@ -19,7 +20,8 @@
     "react-is": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.3",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "use-font-face-observer": "^1.1.69"
   },
   "devDependencies": {
     "@nrwl/cli": "13.1.4",
