--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "12.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-is": "17.0.2",
+    "react-router-dom": "^6.0.2",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.3",
     "tslib": "^2.0.0",
