--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
     "babel-jest": "27.2.3",
-    "babel-plugin-styled-components": "1.10.7",
+    "babel-plugin-styled-components": "^1.10.7",
     "cypress": "^8.3.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.0",
