--- a/apps/futbol-pro/tsconfig.json
+++ b/apps/futbol-pro/tsconfig.json
@@ -12,6 +12,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts","next-env.d.ts","pages/**/*","src/**/*",],
   "exclude": ["node_modules"]
 }
