--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
     "next": "12.0.0",
+    "next-link": "^2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
