--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "13.1.4",
+    "@types/next": "^9.0.0",
     "core-js": "^3.6.5",
     "fontfaceobserver": "^2.1.0",
     "graphql": "^16.0.1",
